// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AttributeAlarm renders blank if no alarm severity specified 1`] = `
<div
  style={
    Object {
      "width": 24,
    }
  }
/>
`;

exports[`AttributeAlarm renders dirty & error correctly 1`] = `
<div>
  <svg
    height="26"
    version="1.1"
    viewBox="0 0 48 48"
    width="26"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m24 4c-11.04 0-20 8.95-20 20s8.96 20 20 20 20-8.95 20-20-8.96-20-20-20zm7.5527 8c0.34172 0 0.68332 0.13059 0.94336 0.39062l3.1133 3.1133c0.52007 0.52007 0.52007 1.3666 0 1.8867l-2.4395 2.4414-5.002-5.002 2.4414-2.4395c0.26004-0.26004 0.60164-0.39062 0.94336-0.39062zm-4.7969 4.2441 5 5-14.756 14.756h-5v-5l14.756-14.756z"
      fill="#f44336"
    />
  </svg>
</div>
`;

exports[`AttributeAlarm renders dirty correctly 1`] = `
<pure(Edit)
  nativeColor="#7986cb"
/>
`;

exports[`AttributeAlarm renders invalid_alarm correctly 1`] = `
<pure(HighlightOff)
  nativeColor="#ac00ff"
/>
`;

exports[`AttributeAlarm renders major_alarm correctly 1`] = `
<pure(Error)
  nativeColor="#ff0f03"
/>
`;

exports[`AttributeAlarm renders minor_alarm correctly 1`] = `
<pure(Warning)
  nativeColor="#fff"
/>
`;

exports[`AttributeAlarm renders no_alarm correctly 1`] = `
<pure(InfoOutline)
  nativeColor="#7986cb"
/>
`;

exports[`AttributeAlarm renders pending correctly 1`] = `
<WithStyles(CircularProgress)
  size={24}
  style={
    Object {
      "color": "#ff4081",
    }
  }
/>
`;

exports[`AttributeAlarm renders undefined_alarm correctly 1`] = `
<pure(HighlightOff)
  nativeColor="#ac00ff"
/>
`;
